Actualización de imágenes y del archivo service.html

--- a/service.html
+++ b/service.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Klean - Cleaning Services Website Template</title>
+    <title>Opticals - Nuestros Servicios</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -32,7 +32,7 @@
         <div class="row">
             <div class="col-lg-3 bg-secondary d-none d-lg-block">
                 <a href="" class="navbar-brand w-100 h-100 m-0 p-0 d-flex align-items-center justify-content-center">
-                    <h1 class="m-0 display-3 text-primary">Klean</h1>
+                    <h1 class="m-0 display-3 text-primary">Opticals</h1>
                 </a>
             </div>
             <div class="col-lg-9">
@@ -76,20 +76,20 @@
                     </button>
                     <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                         <div class="navbar-nav mr-auto py-0">
-                            <a href="index.html" class="nav-item nav-link">Home</a>
-                            <a href="about.html" class="nav-item nav-link">About</a>
-                            <a href="service.html" class="nav-item nav-link active">Service</a>
-                            <a href="project.html" class="nav-item nav-link">Project</a>
+                            <a href="index.html" class="nav-item nav-link">Inicio</a>
+                            <a href="about.html" class="nav-item nav-link">Nosotros</a>
+                            <a href="service.html" class="nav-item nav-link active">Servicios</a>
+                            <a href="project.html" class="nav-item nav-link">Productos</a>
                             <div class="nav-item dropdown">
-                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
+                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Paginas</a>
                                 <div class="dropdown-menu rounded-0 m-0">
-                                    <a href="blog.html" class="dropdown-item">Latest Blog</a>
-                                    <a href="single.html" class="dropdown-item">Blog Detail</a>
+                                    <a href="blog.html" class="dropdown-item">Consejos</a>
+                                    <a href="single.html" class="dropdown-item">Articulos</a>
                                 </div>
                             </div>
-                            <a href="contact.html" class="nav-item nav-link">Contact</a>
+                            <a href="contact.html" class="nav-item nav-link">Contacto</a>
                         </div>
-                        <a href="" class="btn btn-primary mr-3 d-none d-lg-block">Get A Quote</a>
+                        <a href="" class="btn btn-primary mr-3 d-none d-lg-block">Agenda Tu Cita</a>
                     </div>
                 </nav>
             </div>
@@ -103,13 +103,13 @@
         <div class="container py-5">
             <div class="row align-items-center py-4">
                 <div class="col-md-6 text-center text-md-left">
-                    <h1 class="display-4 mb-4 mb-md-0 text-secondary text-uppercase">Service</h1>
+                    <h1 class="display-4 mb-4 mb-md-0 text-secondary text-uppercase">Nuestros Servicios</h1>
                 </div>
                 <div class="col-md-6 text-center text-md-right">
                     <div class="d-inline-flex align-items-center">
-                        <a class="btn btn-sm btn-outline-light" href="">Home</a>
+                        <a class="btn btn-sm btn-outline-light" href="">Inicio</a>
                         <i class="fas fa-angle-double-right text-light mx-2"></i>
-                        <a class="btn btn-sm btn-outline-light disabled" href="">Service</a>
+                        <a class="btn btn-sm btn-outline-light disabled" href="">Servicios</a>
                     </div>
                 </div>
             </div>
@@ -123,7 +123,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6">
-                    <h6 class="text-secondary font-weight-semi-bold text-uppercase mb-3">Our Services</h6>
+                    <h6 class="text-secondary font-weight-semi-bold text-uppercase mb-3">Lo Que Te Podemos Ofrecer</h6>
                     <h1 class="mb-4 section-title">Awesome Cleaning Services For You</h1>
                     <p>Invidunt lorem justo clita. Erat lorem labore ea, justo dolor lorem ipsum ut sed eos, ipsum et dolor kasd sit ea justo. Erat justo sed sed diam. Ea et erat ut sed diam sea ipsum</p>
                     <a href="" class="btn btn-primary mt-3 py-2 px-4">More Services</a>
