--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Klean - Cleaning Services Website Template</title>
+    <title>Opticals - Acerca de Nosotros</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -32,7 +32,7 @@
         <div class="row">
             <div class="col-lg-3 bg-secondary d-none d-lg-block">
                 <a href="" class="navbar-brand w-100 h-100 m-0 p-0 d-flex align-items-center justify-content-center">
-                    <h1 class="m-0 display-3 text-primary">Klean</h1>
+                    <h1 class="m-0 display-3 text-primary">Opticals</h1>
                 </a>
             </div>
             <div class="col-lg-9">
@@ -69,27 +69,27 @@
                 </div>
                 <nav class="navbar navbar-expand-lg bg-white navbar-light p-0">
                     <a href="" class="navbar-brand d-block d-lg-none">
-                        <h1 class="m-0 display-4 text-primary">Klean</h1>
+                        <h1 class="m-0 display-4 text-primary">Opticals</h1>
                     </a>
                     <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                         <div class="navbar-nav mr-auto py-0">
-                            <a href="index.html" class="nav-item nav-link">Home</a>
-                            <a href="about.html" class="nav-item nav-link active">About</a>
-                            <a href="service.html" class="nav-item nav-link">Service</a>
-                            <a href="project.html" class="nav-item nav-link">Project</a>
+                            <a href="index.html" class="nav-item nav-link">Inicio</a>
+                            <a href="about.html" class="nav-item nav-link active">Nosotros</a>
+                            <a href="service.html" class="nav-item nav-link">Servicios</a>
+                            <a href="project.html" class="nav-item nav-link">Productos</a>
                             <div class="nav-item dropdown">
-                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
+                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Páginas</a>
                                 <div class="dropdown-menu rounded-0 m-0">
-                                    <a href="blog.html" class="dropdown-item">Latest Blog</a>
-                                    <a href="single.html" class="dropdown-item">Blog Detail</a>
+                                    <a href="blog.html" class="dropdown-item">Consejos</a>
+                                    <a href="single.html" class="dropdown-item">Articulos</a>
                                 </div>
                             </div>
-                            <a href="contact.html" class="nav-item nav-link">Contact</a>
+                            <a href="contact.html" class="nav-item nav-link">Contacto</a>
                         </div>
-                        <a href="" class="btn btn-primary mr-3 d-none d-lg-block">Get A Quote</a>
+                        <a href="" class="btn btn-primary mr-3 d-none d-lg-block">Agenda tu Cita</a>
                     </div>
                 </nav>
             </div>
@@ -103,13 +103,13 @@
         <div class="container py-5">
             <div class="row align-items-center py-4">
                 <div class="col-md-6 text-center text-md-left">
-                    <h1 class="display-4 mb-4 mb-md-0 text-secondary text-uppercase">About</h1>
+                    <h1 class="display-4 mb-4 mb-md-0 text-secondary text-uppercase">Quiénes Somos</h1>
                 </div>
                 <div class="col-md-6 text-center text-md-right">
                     <div class="d-inline-flex align-items-center">
-                        <a class="btn btn-sm btn-outline-light" href="">Home</a>
+                        <a class="btn btn-sm btn-outline-light" href="">Inicio</a>
                         <i class="fas fa-angle-double-right text-light mx-2"></i>
-                        <a class="btn btn-sm btn-outline-light disabled" href="">About</a>
+                        <a class="btn btn-sm btn-outline-light disabled" href="">Acerca De</a>
                     </div>
                 </div>
             </div>
@@ -125,17 +125,17 @@
                 <div class="col-lg-5">
                     <div class="d-flex flex-column align-items-center justify-content-center bg-about rounded h-100 py-5 px-3">
                         <i class="fa fa-5x fa-award text-primary mb-4"></i>
-                        <h1 class="display-2 text-white mb-2" data-toggle="counter-up">25</h1>
-                        <h2 class="text-white m-0">Years Experience</h2>
+                        <h1 class="display-2 text-white mb-2" data-toggle="counter-up">20</h1>
+                        <h2 class="text-white m-0">Años de Experiencia</h2>
                     </div>
                 </div>
                 <div class="col-lg-7 pt-5 pb-lg-5">
-                    <h6 class="text-secondary font-weight-semi-bold text-uppercase mb-3">Learn About Us</h6>
-                    <h1 class="mb-4 section-title">We Provide The Best Cleaning Services</h1>
-                    <h5 class="text-muted font-weight-normal mb-3">Eos kasd eos dolor vero vero, lorem stet diam rebum. Ipsum amet sed vero dolor sea lorem justo est dolor eos</h5>
-                    <p>Invidunt lorem justo sanctus clita. Erat lorem labore ea, justo dolor lorem ipsum ut sed eos, ipsum et dolor kasd sit ea justo. Erat justo sed sed diam. Ea et erat ut sed diam sea ipsum est dolor</p>
+                    <h6 class="text-secondary font-weight-semi-bold text-uppercase mb-3">Quiénes somos</h6>
+                    <h1 class="mb-4 section-title">Cuidamos tu Salud Visual</h1>
+                    <h5 class="text-muted font-weight-normal mb-3">Somos Una Óptica especializados en Salud Visual</h5>
+                    <p>En Opticals te ofrecemos atención profesional y personalizada, con la mejor tecnología en diagnóstico visual</p>
                     <div class="d-flex align-items-center pt-4">
-                        <a href="" class="btn btn-primary mr-5">Learn More</a>
+                        <a href="" class="btn btn-primary mr-5">Conce Más</a>
                         <button type="button" class="btn-play" data-toggle="modal"
                             data-src="https://www.youtube.com/embed/DWRcNpR6Kdc" data-target="#videoModal">
                             <span></span>
@@ -173,21 +173,21 @@
         <div class="container py-5">
             <div class="row">
                 <div class="col-lg-7 pt-lg-5 pb-3">
-                    <h6 class="text-secondary font-weight-semi-bold text-uppercase mb-3">Why Choose Us</h6>
-                    <h1 class="mb-4 section-title">25 Years Experience In Cleaning Industry</h1>
-                    <p class="mb-4">Dolores lorem lorem ipsum sit et ipsum. Sadip sea amet diam dolore sed et. Sit rebum labore sit sit ut vero no sit. Et elitr stet dolor sed sit et sed ipsum et kasd ut. Erat duo eos et erat sed diam duo</p>
+                    <h6 class="text-secondary font-weight-semi-bold text-uppercase mb-3">Por Qué Elegirnos</h6>
+                    <h1 class="mb-4 section-title">Más de 20 Años nos Respaldan</h1>
+                    <p class="mb-4">Somos una Óptica con mas de 20 años de experiencia en el cuidado de la salud visual de las personas, Brindamos servicio profesional y de calidad a cada uno de nuestros pacientes</p>
                     <div class="row">
                         <div class="col-sm-4">
-                            <h1 class="text-secondary mb-2" data-toggle="counter-up">225</h1>
-                            <h6 class="font-weight-semi-bold mb-sm-4">Our Cleaners</h6>
+                            <h1 class="text-secondary mb-2" data-toggle="counter-up">7500</h1>
+                            <h6 class="font-weight-semi-bold mb-sm-4">Clientes Satisfechos</h6>
                         </div>
                         <div class="col-sm-4">
-                            <h1 class="text-secondary mb-2" data-toggle="counter-up">1050</h1>
-                            <h6 class="font-weight-semi-bold mb-sm-4">Happy Clients</h6>
+                            <h1 class="text-secondary mb-2" data-toggle="counter-up">10,000</h1>
+                            <h6 class="font-weight-semi-bold mb-sm-4">Examenes Realizados</h6>
                         </div>
                         <div class="col-sm-4">
-                            <h1 class="text-secondary mb-2" data-toggle="counter-up">2500</h1>
-                            <h6 class="font-weight-semi-bold mb-sm-4">Projects Done</h6>
+                            <h1 class="text-secondary mb-2" data-toggle="counter-up">20</h1>
+                            <h6 class="font-weight-semi-bold mb-sm-4">Años nos Respaldan</h6>
                         </div>
                     </div>
                 </div>
@@ -207,11 +207,11 @@
         <div class="container py-5">
             <div class="row align-items-end mb-4">
                 <div class="col-lg-6">
-                    <h6 class="text-secondary font-weight-semi-bold text-uppercase mb-3">Meet Our Team</h6>
-                    <h1 class="section-title mb-3">Meet Our Highly Experienced Cleaners</h1>
+                    <h6 class="text-secondary font-weight-semi-bold text-uppercase mb-3">Nuestro Equipo</h6>
+                    <h1 class="section-title mb-3">Conoce a nuestros especialistas en Salud visual</h1>
                 </div>
                 <div class="col-lg-6">
-                    <h4 class="font-weight-normal text-muted mb-3">Eirmod kasd duo eos et magna, diam dolore stet sea clita sit ea erat lorem. Ipsum eos ipsum magna lorem stet</h4>
+                    <h4 class="font-weight-normal text-muted mb-3">Contamos con un Equipo Profesional de Optometristas y Asesores Ópticos</h4>
                 </div>
             </div>
             <div class="row">
@@ -229,8 +229,8 @@
                                 </div>
                             </div>
                             <div class="d-flex flex-column bg-primary text-center py-4">
-                                <h5 class="font-weight-bold">Full Name</h5>
-                                <p class="text-white m-0">Designation</p>
+                                <h5 class="font-weight-bold">Dra. Ana Rodríguez</h5>
+                                <p class="text-white m-0">Optometrista Principal</p>
                             </div>
                         </div>
                         <div class="team d-flex flex-column text-center rounded overflow-hidden">
@@ -245,8 +245,8 @@
                                 </div>
                             </div>
                             <div class="d-flex flex-column bg-primary text-center py-4">
-                                <h5 class="font-weight-bold">Full Name</h5>
-                                <p class="text-white m-0">Designation</p>
+                                <h5 class="font-weight-bold">Lic. Fernanda Torres</h5>
+                                <p class="text-white m-0">Asesora Óptica</p>
                             </div>
                         </div>
                         <div class="team d-flex flex-column text-center rounded overflow-hidden">
@@ -261,8 +261,8 @@
                                 </div>
                             </div>
                             <div class="d-flex flex-column bg-primary text-center py-4">
-                                <h5 class="font-weight-bold">Full Name</h5>
-                                <p class="text-white m-0">Designation</p>
+                                <h5 class="font-weight-bold">Dra. Sofia Renaud</h5>
+                                <p class="text-white m-0">Directora Gral. Optometría</p>
                             </div>
                         </div>
                         <div class="team d-flex flex-column text-center rounded overflow-hidden">
@@ -277,8 +277,8 @@
                                 </div>
                             </div>
                             <div class="d-flex flex-column bg-primary text-center py-4">
-                                <h5 class="font-weight-bold">Full Name</h5>
-                                <p class="text-white m-0">Designation</p>
+                                <h5 class="font-weight-bold">Dr. Jacob Winks</h5>
+                                <p class="text-white m-0">Especialista en Salud Visual</p>
                             </div>
                         </div>
                     </div>
@@ -294,18 +294,18 @@
         <div class="row pt-5">
             <div class="col-lg-3 col-md-6 mb-5">
                 <a href="index.html" class="navbar-brand">
-                    <h1 class="m-0 mt-n3 display-4 text-primary">Klean</h1>
+                    <h1 class="m-0 mt-n3 display-4 text-primary">Opticals</h1>
                 </a>
-                <p>Volup amet magna clita tempor. Tempor sea eos vero ipsum. Lorem lorem sit sed elitr sed kasd et</p>
-                <h5 class="font-weight-semi-bold text-white mb-2">Opening Hours:</h5>
-                <p class="mb-1">Mon – Sat, 8AM – 5PM</p>
-                <p class="mb-0">Sunday: Closed</p>
+                <p>Especialistas en salud visual con más de 20 años de experiencia</p>
+                <h5 class="font-weight-semi-bold text-white mb-2">Horarios de Atención:</h5>
+                <p class="mb-1">Lun – Sab, 8AM – 6PM</p>
+                <p class="mb-0">Domingo: Cerrado</p>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
-                <h4 class="font-weight-semi-bold text-primary mb-4">Get In Touch</h4>
-                <p><i class="fa fa-map-marker-alt text-primary mr-2"></i>123 Street, New York, USA</p>
-                <p><i class="fa fa-phone-alt text-primary mr-2"></i>+012 345 67890</p>
-                <p><i class="fa fa-envelope text-primary mr-2"></i>info@example.com</p>
+                <h4 class="font-weight-semi-bold text-primary mb-4">Contáctanos</h4>
+                <p><i class="fa fa-map-marker-alt text-primary mr-2"></i>Querétaro, Qro. Méx</p>
+                <p><i class="fa fa-phone-alt text-primary mr-2"></i>+52 442 123 4567</p>
+                <p><i class="fa fa-envelope text-primary mr-2"></i>opticals@gmail.com</p>
                 <div class="d-flex justify-content-start mt-4">
                     <a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a>
                     <a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
@@ -314,23 +314,23 @@
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
-                <h4 class="font-weight-semi-bold text-primary mb-4">Quick Links</h4>
+                <h4 class="font-weight-semi-bold text-primary mb-4">Enlaces</h4>
                 <div class="d-flex flex-column justify-content-start">
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Home</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>About Us</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Our Services</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Our Projects</a>
-                    <a class="text-white" href="#"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
+                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Inicio</a>
+                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Nosotros</a>
+                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Servicios</a>
+                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Productos</a>
+                    <a class="text-white" href="#"><i class="fa fa-angle-right mr-2"></i>Contacto</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
-                <h4 class="font-weight-semi-bold text-primary mb-4">Newsletter</h4>
-                <p>Rebum labore lorem dolores kasd est, et ipsum amet et at kasd, ipsum sea tempor magna tempor. Accu kasd sed ea duo ipsum.</p>
+                <h4 class="font-weight-semi-bold text-primary mb-4">Informacion</h4>
+                <p>Suscríbete para recibir tips de cuidado visual, promociones y novedades en lentes y armazones</p>
                 <div class="w-100">
                     <div class="input-group">
                         <input type="text" class="form-control border-0" style="padding: 25px;" placeholder="Your Email">
                         <div class="input-group-append">
-                            <button class="btn btn-primary px-4">Sign Up</button>
+                            <button class="btn btn-primary px-4">Suscribirse</button>
                         </div>
                     </div>
                 </div>
@@ -340,22 +340,22 @@
     <div class="container-fluid bg-dark text-white border-top py-4 px-sm-3 px-md-5" style="border-color: #3E3E4E !important;">
         <div class="row">
             <div class="col-lg-6 text-center text-md-left mb-3 mb-md-0">
-                <p class="m-0 text-white">&copy; <a href="#">Your Site Name</a>. All Rights Reserved. Designed by <a href="https://htmlcodex.com">HTML Codex</a>
+                <p class="m-0 text-white">&copy; <a href="#">Ópticals</a>. Todos los derechos reservados. Diseñado por <a href="https://htmlcodex.com">Fernando Tapia Ortega</a>
                 </p>
             </div>
             <div class="col-lg-6 text-center text-md-right">
                 <ul class="nav d-inline-flex">
                     <li class="nav-item">
-                        <a class="nav-link text-white py-0" href="#">Privacy</a>
+                        <a class="nav-link text-white py-0" href="#">Privacidad</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white py-0" href="#">Terms</a>
+                        <a class="nav-link text-white py-0" href="#">Terminos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white py-0" href="#">FAQs</a>
+                        <a class="nav-link text-white py-0" href="#">Preguntas Frecuentes</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white py-0" href="#">Help</a>
+                        <a class="nav-link text-white py-0" href="#">Ayuda</a>
                     </li>
                 </ul>
             </div>
