Actualización de todos los index, CSS y nuevas imágenes de servicios

--- a/service.html
+++ b/service.html
@@ -40,11 +40,11 @@
                     <div class="col-lg-7 text-left text-white">
                         <div class="h-100 d-inline-flex align-items-center border-right border-primary py-2 px-3">
                             <i class="fa fa-envelope text-primary mr-2"></i>
-                            <small>info@example.com</small>
+                            <small>opticals@gmail.com</small>
                         </div>
                         <div class="h-100 d-inline-flex align-items-center py-2 px-2">
                             <i class="fa fa-phone-alt text-primary mr-2"></i>
-                            <small>+012 345 6789</small>
+                            <small>+52 442 123 4567</small>
                         </div>
                     </div>
                     <div class="col-lg-5 text-right">
@@ -119,55 +119,60 @@
 
 
     <!-- Services Start -->
-    <div class="container-fluid py-5">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-6">
-                    <h6 class="text-secondary font-weight-semi-bold text-uppercase mb-3">Lo Que Te Podemos Ofrecer</h6>
-                    <h1 class="mb-4 section-title">Awesome Cleaning Services For You</h1>
-                    <p>Invidunt lorem justo clita. Erat lorem labore ea, justo dolor lorem ipsum ut sed eos, ipsum et dolor kasd sit ea justo. Erat justo sed sed diam. Ea et erat ut sed diam sea ipsum</p>
-                    <a href="" class="btn btn-primary mt-3 py-2 px-4">More Services</a>
-                </div>
-                <div class="col-lg-6 pt-5 pt-lg-0">
-                    <div class="owl-carousel service-carousel position-relative">
-                        <div class="d-flex flex-column align-items-center text-center bg-light rounded overflow-hidden pt-4">
-                            <div class="icon-box bg-light text-secondary shadow mt-2 mb-4">
-                                <i class="fa fa-2x fa-hotel"></i>
-                            </div>
-                            <h5 class="font-weight-bold mb-4 px-4">Home Cleaning</h5>
-                            <img src="img/blog-1.jpg" alt="">
-                        </div>
-                        <div class="d-flex flex-column align-items-center text-center bg-light rounded overflow-hidden pt-4">
-                            <div class="icon-box bg-light text-secondary shadow mt-2 mb-4">
-                                <i class="fa fa-2x fa-city"></i>
-                            </div>
-                            <h5 class="font-weight-bold mb-4 px-4">Window Cleaning</h5>
-                            <img src="img/blog-3.jpg" alt="">
-                        </div>
-                        <div class="d-flex flex-column align-items-center text-center bg-light rounded overflow-hidden pt-4">
-                            <div class="icon-box bg-light text-secondary shadow mt-2 mb-4">
-                                <i class="fa fa-2x fa-spa"></i>
-                            </div>
-                            <h5 class="font-weight-bold mb-4 px-4">Carpet Cleaning</h5>
-                            <img src="img/blog-2.jpg" alt="">
-                        </div>
-                    </div>
-                </div>
-            </div>
+
+<div class="container-fluid py-5">
+  <div class="container py-5">
+    <div class="row align-items-center">
+      
+      <!-- Texto y lista de servicios -->
+      <div class="col-lg-6">
+        <h6 class="text-secondary font-weight-semi-bold text-uppercase mb-3">Lo Que Te Podemos Ofrecer</h6>
+        <h1 class="mb-4 section-title">Servicios Ópticos Profesionales</h1>
+        <p>En Ópticals te brindamos atención visual personalizada y soluciones a la medida de tus necesidades. Contamos con tecnología avanzada y personal especializado en salud visual.</p>
+
+        <ul class="list-unstyled mt-4">
+          <li class="mb-2"><i class="fa fa-eye text-primary mr-2"></i> Exámenes de la Vista Profesionales</li>
+          <li class="mb-2"><i class="fa fa-glasses text-primary mr-2"></i> Venta de Lentes y Armazones</li>
+          <li class="mb-2"><i class="fa fa-tools text-primary mr-2"></i> Reparación y Ajuste de Lentes</li>
+          <li class="mb-2"><i class="fa fa-ruler-combined text-primary mr-2"></i> Adaptación de Lentes de Contacto</li>
+          <li class="mb-2"><i class="fa fa-desktop text-primary mr-2"></i> Diagnóstico Computarizado de la Visión</li>
+          <li class="mb-2"><i class="fa fa-heartbeat text-primary mr-2"></i> Asesoría en Salud Visual y Prevención</li>
+        </ul>
+      </div>
+
+      <!-- Galería de imágenes -->
+      <div class="col-lg-6 pt-5 pt-lg-0">
+        <div class="row">
+          <div class="col-6 mb-4">
+            <img src="img/servicios/examen-vista.jpeg" class="img-fluid rounded shadow service-img" alt="Examen de la vista">
+          </div>
+          <div class="col-6 mb-4">
+            <img src="img/servicios/lentes-armazones.jpeg" class="img-fluid rounded shadow service-img" alt="Lentes y armazones">
+          </div>
+          <div class="col-6 mb-4">
+            <img src="img/servicios/reparacion-lentes.jpg" class="img-fluid rounded shadow service-img" alt="Reparación de lentes">
+          </div>
+          <div class="col-6 mb-4">
+            <img src="img/servicios/lentes-contacto.jpeg" class="img-fluid rounded shadow service-img" alt="Adaptación de lentes de contacto">
+          </div>
         </div>
+      </div>
+
     </div>
-    <!-- Services End -->
+  </div>
+</div>
+<!-- Services End -->
 
 
-    <!-- Contact Info Start -->
+<!-- Contact Info Start -->
     <div class="container-fluid py-5 contact-info">
         <div class="row">
             <div class="col-lg-4 p-0">
                 <div class="contact-info-item d-flex align-items-center justify-content-center bg-primary text-white py-4 py-lg-0">
                     <i class="fa fa-3x fa-map-marker-alt text-secondary mr-4"></i>
                     <div class="">
-                        <h5 class="mb-2">Our Office</h5>
-                        <p class="m-0">123 Street, New York, USA</p>
+                        <h5 class="mb-2">Av Begonias #1497</h5>
+                        <p class="m-0">Queretaro,Qro. Mex</p>
                     </div>
                 </div>
             </div>
@@ -175,8 +180,8 @@
                 <div class="contact-info-item d-flex align-items-center justify-content-center bg-secondary text-white py-4 py-lg-0">
                     <i class="fa fa-3x fa-envelope-open text-primary mr-4"></i>
                     <div class="">
-                        <h5 class="mb-2">Email Us</h5>
-                        <p class="m-0">info@example.com</p>
+                        <h5 class="mb-2">Correo de Contacto</h5>
+                        <p class="m-0">opticals@gmail.com</p>
                     </div>
                 </div>
             </div>
@@ -184,8 +189,8 @@
                 <div class="contact-info-item d-flex align-items-center justify-content-center bg-primary text-white py-4 py-lg-0">
                     <i class="fa fa-3x fa-phone-alt text-secondary mr-4"></i>
                     <div class="">
-                        <h5 class="mb-2">Call Us</h5>
-                        <p class="m-0">+012 345 6789</p>
+                        <h5 class="mb-2">Llamanos</h5>
+                        <p class="m-0">442 123 4567</p>
                     </div>
                 </div>
             </div>
@@ -199,38 +204,38 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-7 pt-lg-5 pb-5">
-                    <h6 class="text-secondary font-weight-semi-bold text-uppercase mb-3">Testimonial</h6>
-                    <h1 class="section-title mb-5">What Our Clients Say</h1>
+                    <h6 class="text-secondary font-weight-semi-bold text-uppercase mb-3">Testimonios</h6>
+                    <h1 class="section-title mb-5">Lo Que Dicen Nuestros Pacientes</h1>
                     <div class="owl-carousel testimonial-carousel position-relative">
                         <div class="d-flex flex-column">
                             <div class="d-flex align-items-center mb-3">
                                 <img class="img-fluid" src="img/testimonial-1.jpg" alt="">
                                 <div class="ml-3">
-                                    <h5>Client Name</h5>
-                                    <i>Profession</i>
+                                    <h5>Diana López</h5>
+                                    <i>Paciente de Examen Visual</i>
                                 </div>
                             </div>
-                            <p>Tempor at diam tempor sed. Sanctus dolor ipsum ut nonumy amet clita sea. Sed eos sed dolores vero no. Ipsum elitr elitr stet dolor  lorem erat. Diam no amet sea justo vero ut. Dolor ipsum kasd ipsum dolore.</p>
+                            <p>Excelente atención y equipos muy modernos.Me explicaron todo el proceso con paciencia y profesionalismo</p>
                         </div>
                         <div class="d-flex flex-column">
                             <div class="d-flex align-items-center mb-3">
                                 <img class="img-fluid" src="img/testimonial-2.jpg" alt="">
                                 <div class="ml-3">
-                                    <h5>Client Name</h5>
-                                    <i>Profession</i>
+                                    <h5>Carlos Méndez</h5>
+                                    <i>Cliente de Lentes Graduados</i>
                                 </div>
                             </div>
-                            <p>Tempor at diam tempor sed. Sanctus dolor ipsum ut nonumy amet clita sea. Sed eos sed dolores vero no. Ipsum elitr elitr stet dolor  lorem erat. Diam no amet sea justo vero ut. Dolor ipsum kasd ipsum dolore.</p>
+                            <p>"Me ayudaron a elegir el armazon ideal y los lentes llegaron rápido"</p>
                         </div>
                         <div class="d-flex flex-column">
                             <div class="d-flex align-items-center mb-3">
                                 <img class="img-fluid" src="img/testimonial-3.jpg" alt="">
                                 <div class="ml-3">
-                                    <h5>Client Name</h5>
-                                    <i>Profession</i>
+                                    <h5>Luis Hernández</h5>
+                                    <i>Paciente de control visual</i>
                                 </div>
                             </div>
-                            <p>Tempor at diam tempor sed. Sanctus dolor ipsum ut nonumy amet clita sea. Sed eos sed dolores vero no. Ipsum elitr elitr stet dolor  lorem erat. Diam no amet sea justo vero ut. Dolor ipsum kasd ipsum dolore.</p>
+                            <p>Llevo años atendiendome con ellos.Muy profesionales y siempre actualizados con la mejor tecnología</p>
                         </div>
                     </div>
                 </div>
@@ -250,18 +255,18 @@
         <div class="row pt-5">
             <div class="col-lg-3 col-md-6 mb-5">
                 <a href="index.html" class="navbar-brand">
-                    <h1 class="m-0 mt-n3 display-4 text-primary">Klean</h1>
+                    <h1 class="m-0 mt-n3 display-4 text-primary">Opticals</h1>
                 </a>
-                <p>Volup amet magna clita tempor. Tempor sea eos vero ipsum. Lorem lorem sit sed elitr sed kasd et</p>
-                <h5 class="font-weight-semi-bold text-white mb-2">Opening Hours:</h5>
-                <p class="mb-1">Mon – Sat, 8AM – 5PM</p>
-                <p class="mb-0">Sunday: Closed</p>
+                <p>Especialistas en salud visual con más de 20 años de experiencia</p>
+                <h5 class="font-weight-semi-bold text-white mb-2">Horarios de Atención:</h5>
+                <p class="mb-1">Lun – Sab, 8AM – 6PM</p>
+                <p class="mb-0">Domingo: Cerrado</p>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
-                <h4 class="font-weight-semi-bold text-primary mb-4">Get In Touch</h4>
-                <p><i class="fa fa-map-marker-alt text-primary mr-2"></i>123 Street, New York, USA</p>
-                <p><i class="fa fa-phone-alt text-primary mr-2"></i>+012 345 67890</p>
-                <p><i class="fa fa-envelope text-primary mr-2"></i>info@example.com</p>
+                <h4 class="font-weight-semi-bold text-primary mb-4">Contáctanos</h4>
+                <p><i class="fa fa-map-marker-alt text-primary mr-2"></i>Querétaro, Qro. Méx</p>
+                <p><i class="fa fa-phone-alt text-primary mr-2"></i>+52 442 123 4567</p>
+                <p><i class="fa fa-envelope text-primary mr-2"></i>opticals@gmail.com</p>
                 <div class="d-flex justify-content-start mt-4">
                     <a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a>
                     <a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
@@ -270,23 +275,23 @@
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
-                <h4 class="font-weight-semi-bold text-primary mb-4">Quick Links</h4>
+                <h4 class="font-weight-semi-bold text-primary mb-4">Enlaces</h4>
                 <div class="d-flex flex-column justify-content-start">
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Home</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>About Us</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Our Services</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Our Projects</a>
-                    <a class="text-white" href="#"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
+                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Inicio</a>
+                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Nosotros</a>
+                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Servicios</a>
+                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Productos</a>
+                    <a class="text-white" href="#"><i class="fa fa-angle-right mr-2"></i>Contacto</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
-                <h4 class="font-weight-semi-bold text-primary mb-4">Newsletter</h4>
-                <p>Rebum labore lorem dolores kasd est, et ipsum amet et at kasd, ipsum sea tempor magna tempor. Accu kasd sed ea duo ipsum.</p>
+                <h4 class="font-weight-semi-bold text-primary mb-4">Informacion</h4>
+                <p>Suscríbete para recibir tips de cuidado visual, promociones y novedades en lentes y armazones</p>
                 <div class="w-100">
                     <div class="input-group">
                         <input type="text" class="form-control border-0" style="padding: 25px;" placeholder="Your Email">
                         <div class="input-group-append">
-                            <button class="btn btn-primary px-4">Sign Up</button>
+                            <button class="btn btn-primary px-4">Suscribirse</button>
                         </div>
                     </div>
                 </div>
@@ -302,16 +307,16 @@
             <div class="col-lg-6 text-center text-md-right">
                 <ul class="nav d-inline-flex">
                     <li class="nav-item">
-                        <a class="nav-link text-white py-0" href="#">Privacy</a>
+                        <a class="nav-link text-white py-0" href="#">Privacidad</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white py-0" href="#">Terms</a>
+                        <a class="nav-link text-white py-0" href="#">Terminos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white py-0" href="#">FAQs</a>
+                        <a class="nav-link text-white py-0" href="#">Preguntas Frecuentes</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white py-0" href="#">Help</a>
+                        <a class="nav-link text-white py-0" href="#">Ayuda</a>
                     </li>
                 </ul>
             </div>
