--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
                     <div class="col-lg-7 text-left text-white">
                         <div class="h-100 d-inline-flex align-items-center border-right border-primary py-2 px-3">
                             <i class="fa fa-envelope text-primary mr-2"></i>
-                            <small>info@example.com</small>
+                            <small>opticals@gmail.com</small>
                         </div>
                         <div class="h-100 d-inline-flex align-items-center py-2 px-2">
                             <i class="fa fa-phone-alt text-primary mr-2"></i>
-                            <small>+012 345 6789</small>
+                            <small>+52 442 123 4567</small>
                         </div>
                     </div>
                     <div class="col-lg-5 text-right">
@@ -635,7 +635,7 @@
         <div class="row pt-5">
             <div class="col-lg-3 col-md-6 mb-5">
                 <a href="index.html" class="navbar-brand"></h5>
-                    <h1 class="m-0 mt-n3 display-4 text-primary">Ópticals</h1>
+                    <h1 class="m-0 mt-n3 display-4 text-primary">Opticals</h1>
                 </a>
                 <p>Especialistas en salud visual con más de 20 años de experiencia</p>
                 <h5 class="font-weight-semi-bold text-white mb-2">Horarios de Atención:</h5>
@@ -681,7 +681,7 @@
     <div class="container-fluid bg-dark text-white border-top py-4 px-sm-3 px-md-5" style="border-color: #3E3E4E !important;">
         <div class="row">
             <div class="col-lg-6 text-center text-md-left mb-3 mb-md-0">
-                <p class="m-0 text-white">&copy; <a href="#">Ópticals</a>. Todos los derechos reservados. Diseñado por <a href="https://htmlcodex.com">Fernando Tapia Ortega</a>
+                <p class="m-0 text-white">&copy; <a href="#">Opticals</a>. Todos los derechos reservados. Diseñado por <a href="https://htmlcodex.com">Fernando Tapia Ortega</a>
                 </p>
             </div>
             <div class="col-lg-6 text-center text-md-right">
