--- a/project.html
+++ b/project.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Klean - Cleaning Services Website Template</title>
+    <title>Opticals - Nuestros Productos</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -32,7 +32,7 @@
         <div class="row">
             <div class="col-lg-3 bg-secondary d-none d-lg-block">
                 <a href="" class="navbar-brand w-100 h-100 m-0 p-0 d-flex align-items-center justify-content-center">
-                    <h1 class="m-0 display-3 text-primary">Klean</h1>
+                    <h1 class="m-0 display-3 text-primary">Opticals</h1>
                 </a>
             </div>
             <div class="col-lg-9">
@@ -40,11 +40,11 @@
                     <div class="col-lg-7 text-left text-white">
                         <div class="h-100 d-inline-flex align-items-center border-right border-primary py-2 px-3">
                             <i class="fa fa-envelope text-primary mr-2"></i>
-                            <small>info@example.com</small>
+                            <small>opticals@gmail.com</small>
                         </div>
                         <div class="h-100 d-inline-flex align-items-center py-2 px-2">
                             <i class="fa fa-phone-alt text-primary mr-2"></i>
-                            <small>+012 345 6789</small>
+                            <small>+52 442 123 4567</small>
                         </div>
                     </div>
                     <div class="col-lg-5 text-right">
@@ -69,27 +69,27 @@
                 </div>
                 <nav class="navbar navbar-expand-lg bg-white navbar-light p-0">
                     <a href="" class="navbar-brand d-block d-lg-none">
-                        <h1 class="m-0 display-4 text-primary">Klean</h1>
+                        <h1 class="m-0 display-4 text-primary">Opticals</h1>
                     </a>
                     <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                         <div class="navbar-nav mr-auto py-0">
-                            <a href="index.html" class="nav-item nav-link">Home</a>
-                            <a href="about.html" class="nav-item nav-link">About</a>
-                            <a href="service.html" class="nav-item nav-link">Service</a>
-                            <a href="project.html" class="nav-item nav-link active">Project</a>
+                            <a href="index.html" class="nav-item nav-link">Inicio</a>
+                            <a href="about.html" class="nav-item nav-link">Nosotros</a>
+                            <a href="service.html" class="nav-item nav-link">Servicios</a>
+                            <a href="project.html" class="nav-item nav-link active">Productos</a>
                             <div class="nav-item dropdown">
-                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
+                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Paginas</a>
                                 <div class="dropdown-menu rounded-0 m-0">
-                                    <a href="blog.html" class="dropdown-item">Latest Blog</a>
-                                    <a href="single.html" class="dropdown-item">Blog Detail</a>
+                                    <a href="blog.html" class="dropdown-item">Carrito</a>
+                                    <a href="single.html" class="dropdown-item">Ver Más Productos</a>
                                 </div>
                             </div>
-                            <a href="contact.html" class="nav-item nav-link">Contact</a>
+                            <a href="contact.html" class="nav-item nav-link">Contacto</a>
                         </div>
-                        <a href="" class="btn btn-primary mr-3 d-none d-lg-block">Get A Quote</a>
+                        <a href="" class="btn btn-primary mr-3 d-none d-lg-block">Comprar</a>
                     </div>
                 </nav>
             </div>
@@ -103,13 +103,13 @@
         <div class="container py-5">
             <div class="row align-items-center py-4">
                 <div class="col-md-6 text-center text-md-left">
-                    <h1 class="display-4 mb-4 mb-md-0 text-secondary text-uppercase">Project</h1>
+                    <h1 class="display-4 mb-4 mb-md-0 text-secondary text-uppercase">Nuestros Productos</h1>
                 </div>
                 <div class="col-md-6 text-center text-md-right">
                     <div class="d-inline-flex align-items-center">
-                        <a class="btn btn-sm btn-outline-light" href="">Home</a>
+                        <a class="btn btn-sm btn-outline-light" href="">Inicio</a>
                         <i class="fas fa-angle-double-right text-light mx-2"></i>
-                        <a class="btn btn-sm btn-outline-light disabled" href="">Project</a>
+                        <a class="btn btn-sm btn-outline-light disabled" href="">Productos</a>
                     </div>
                 </div>
             </div>
@@ -118,137 +118,160 @@
     <!-- Page Header End -->
 
 
-    <!-- Portfolio Start -->
-    <div class="container-fluid py-5">
-        <div class="container">
-            <div class="row align-items-end mb-4">
-                <div class="col-lg-6">
-                    <h6 class="text-secondary font-weight-semi-bold text-uppercase mb-3">Our Projects</h6>
-                    <h1 class="section-title mb-3">Visit Our Awesome Cleaning Projects</h1>
-                </div>
-                <div class="col-lg-6 text-center text-lg-right">
-                    <ul class="list-inline mb-2" id="portfolio-flters">
-                        <li class="btn btn-sm btn-outline-primary m-1 active"  data-filter="*">All</li>
-                        <li class="btn btn-sm btn-outline-primary m-1" data-filter=".first">Complete</li>
-                        <li class="btn btn-sm btn-outline-primary m-1" data-filter=".second">Running</li>
-                        <li class="btn btn-sm btn-outline-primary m-1" data-filter=".third">Upcoming</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="row m-0 portfolio-container">
-                <div class="col-lg-4 col-md-6 col-sm-12 p-0 portfolio-item first">
-                    <div class="position-relative overflow-hidden">
-                        <div class="portfolio-img">
-                            <img class="img-fluid w-100" src="img/portfolio-1.jpg" alt="">
-                        </div>
-                        <div class="portfolio-text bg-primary">
-                            <h4 class="font-weight-bold mb-4">Project Name</h4>
-                            <div class="d-flex align-items-center justify-content-center">
-                                <a class="btn btn-sm btn-secondary m-1" href="">
-                                    <i class="fa fa-link"></i>
-                                </a>
-                                <a class="btn btn-sm btn-secondary m-1" href="img/portfolio-1.jpg" data-lightbox="portfolio">
-                                    <i class="fa fa-eye"></i>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-12 p-0 portfolio-item second">
-                    <div class="position-relative overflow-hidden">
-                        <div class="portfolio-img">
-                            <img class="img-fluid w-100" src="img/portfolio-2.jpg" alt="">
-                        </div>
-                        <div class="portfolio-text bg-primary">
-                            <h4 class="font-weight-bold mb-4">Project Name</h4>
-                            <div class="d-flex align-items-center justify-content-center">
-                                <a class="btn btn-sm btn-secondary m-1" href="">
-                                    <i class="fa fa-link"></i>
-                                </a>
-                                <a class="btn btn-sm btn-secondary m-1" href="img/portfolio-2.jpg" data-lightbox="portfolio">
-                                    <i class="fa fa-eye"></i>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-12 p-0 portfolio-item third">
-                    <div class="position-relative overflow-hidden">
-                        <div class="portfolio-img">
-                            <img class="img-fluid w-100" src="img/portfolio-3.jpg" alt="">
-                        </div>
-                        <div class="portfolio-text bg-primary">
-                            <h4 class="font-weight-bold mb-4">Project Name</h4>
-                            <div class="d-flex align-items-center justify-content-center">
-                                <a class="btn btn-sm btn-secondary m-1" href="">
-                                    <i class="fa fa-link"></i>
-                                </a>
-                                <a class="btn btn-sm btn-secondary m-1" href="img/portfolio-3.jpg" data-lightbox="portfolio">
-                                    <i class="fa fa-eye"></i>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-12 p-0 portfolio-item first">
-                    <div class="position-relative overflow-hidden">
-                        <div class="portfolio-img">
-                            <img class="img-fluid w-100" src="img/portfolio-4.jpg" alt="">
-                        </div>
-                        <div class="portfolio-text bg-primary">
-                            <h4 class="font-weight-bold mb-4">Project Name</h4>
-                            <div class="d-flex align-items-center justify-content-center">
-                                <a class="btn btn-sm btn-secondary m-1" href="">
-                                    <i class="fa fa-link"></i>
-                                </a>
-                                <a class="btn btn-sm btn-secondary m-1" href="img/portfolio-4.jpg" data-lightbox="portfolio">
-                                    <i class="fa fa-eye"></i>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-12 p-0 portfolio-item second">
-                    <div class="position-relative overflow-hidden">
-                        <div class="portfolio-img">
-                            <img class="img-fluid w-100" src="img/portfolio-5.jpg" alt="">
-                        </div>
-                        <div class="portfolio-text bg-primary">
-                            <h4 class="font-weight-bold mb-4">Project Name</h4>
-                            <div class="d-flex align-items-center justify-content-center">
-                                <a class="btn btn-sm btn-secondary m-1" href="">
-                                    <i class="fa fa-link"></i>
-                                </a>
-                                <a class="btn btn-sm btn-secondary m-1" href="img/portfolio-5.jpg" data-lightbox="portfolio">
-                                    <i class="fa fa-eye"></i>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-12 p-0 portfolio-item third">
-                    <div class="position-relative overflow-hidden">
-                        <div class="portfolio-img">
-                            <img class="img-fluid w-100" src="img/portfolio-6.jpg" alt="">
-                        </div>
-                        <div class="portfolio-text bg-primary">
-                            <h4 class="font-weight-bold mb-4">Project Name</h4>
-                            <div class="d-flex align-items-center justify-content-center">
-                                <a class="btn btn-sm btn-secondary m-1" href="">
-                                    <i class="fa fa-link"></i>
-                                </a>
-                                <a class="btn btn-sm btn-secondary m-1" href="img/portfolio-6.jpg" data-lightbox="portfolio">
-                                    <i class="fa fa-eye"></i>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+   <!-- SECCIÓN CATÁLOGO DE PRODUCTOS -->
+<section id="catalogo" class="py-5 bg-light">
+  <div class="container">
+    <h2 class="text-center mb-4 text-primary">Catálogo de Productos</h2>
+    <p class="text-center mb-5 text-muted">
+      Explora nuestra selección de armazones, lentes de contacto y accesorios de última tecnología.
+    </p>
+
+    <div class="row">
+      <!-- Producto 1 -->
+      <div class="col-md-3 col-sm-6 mb-4">
+        <div class="card shadow-sm border-0">
+          <img src="img/servicios/lente-antirreflejante.jpeg" class="card-img-top" alt="Lente antirreflejante">
+          <div class="card-body text-center">
+            <h5 class="card-title">Lente Antirreflejante</h5>
+            <p class="card-text text-muted">$1,250 MXN</p>
+            <button class="btn btn-warning btn-sm">Comprar</button>
+          </div>
         </div>
+      </div>
+
+      <!-- Producto 2 -->
+      <div class="col-md-3 col-sm-6 mb-4">
+        <div class="card shadow-sm border-0">
+          <img src="img/servicios/armazon moderno.jpeg" class="card-img-top" alt="Armazón moderno">
+          <div class="card-body text-center">
+            <h5 class="card-title">Armazón Moderno</h5>
+            <p class="card-text text-muted">$890 MXN</p>
+            <button class="btn btn-warning btn-sm">Comprar</button>
+          </div>
         </div>
+      </div>
+
+      <!-- Producto 3 -->
+      <div class="col-md-3 col-sm-6 mb-4">
+        <div class="card shadow-sm border-0">
+          <img src="img/servicios/lentes-contacto-producto.jpeg" class="card-img-top" alt="Lentes de contacto">
+          <div class="card-body text-center">
+            <h5 class="card-title">Lentes de Contacto</h5>
+            <p class="card-text text-muted">$650 MXN</p>
+            <button class="btn btn-warning btn-sm">Comprar</button>
+          </div>
+        </div>
+      </div>
+
+      <!-- Producto 4 -->
+      <div class="col-md-3 col-sm-6 mb-4">
+        <div class="card shadow-sm border-0">
+          <img src="img/servicios/limpiador-lentes.jpeg" class="card-img-top" alt="Limpiador de lentes">
+          <div class="card-body text-center">
+            <h5 class="card-title">Kit Limpiador de Lentes</h5>
+            <p class="card-text text-muted">$199 MXN</p>
+            <button class="btn btn-warning btn-sm">Comprar</button>
+          </div>
+        </div>
+      </div>
     </div>
-    <!-- Portfolio End -->
+  </div>
+</section>
+
+<!-- SECCIÓN CARRITO -->
+<section id="carrito" class="py-5 bg-white">
+  <div class="container">
+    <h2 class="text-center mb-4 text-primary">🛒 Tu Carrito de Compras</h2>
+    <table class="table table-bordered text-center align-middle">
+      <thead class="table-warning">
+        <tr>
+          <th>Producto</th>
+          <th>Precio</th>
+          <th>Cantidad</th>
+          <th>Total</th>
+          <th>Acción</th>
+        </tr>
+      </thead>
+      <tbody id="cart-items"></tbody>
+    </table>
+    <h4 class="text-end mt-3">Total General: <span id="cart-total">0</span> MXN</h4>
+    <div class="text-center mt-4">
+      <button class="btn btn-success" id="checkout-btn">Finalizar Compra</button>
+      <button class="btn btn-danger" id="clear-cart">Vaciar Carrito</button>
+    </div>
+  </div>
+</section>
+
+<script>
+const cart = [];
+const cartItems = document.getElementById("cart-items");
+const cartTotal = document.getElementById("cart-total");
+
+document.querySelectorAll(".add-to-cart").forEach(button => {
+  button.addEventListener("click", () => {
+    const name = button.dataset.name;
+    const price = parseFloat(button.dataset.price);
+    const existing = cart.find(item => item.name === name);
+    if (existing) {
+      existing.quantity++;
+    } else {
+      cart.push({ name, price, quantity: 1 });
+    }
+    renderCart();
+  });
+});
+
+function renderCart() {
+  cartItems.innerHTML = "";
+  let total = 0;
+  cart.forEach((item, index) => {
+    const subtotal = item.price * item.quantity;
+    total += subtotal;
+    const row = `
+      <tr>
+        <td>${item.name}</td>
+        <td>${item.price} MXN</td>
+        <td>
+          <button class="btn btn-sm btn-outline-secondary" onclick="updateQuantity(${index}, -1)">-</button>
+          ${item.quantity}
+          <button class="btn btn-sm btn-outline-secondary" onclick="updateQuantity(${index}, 1)">+</button>
+        </td>
+        <td>${subtotal} MXN</td>
+        <td><button class="btn btn-danger btn-sm" onclick="removeItem(${index})">Eliminar</button></td>
+      </tr>`;
+    cartItems.innerHTML += row;
+  });
+  cartTotal.textContent = total.toFixed(2);
+}
+
+function updateQuantity(index, change) {
+  cart[index].quantity += change;
+  if (cart[index].quantity <= 0) cart.splice(index, 1);
+  renderCart();
+}
+
+function removeItem(index) {
+  cart.splice(index, 1);
+  renderCart();
+}
+
+document.getElementById("clear-cart").addEventListener("click", () => {
+  cart.length = 0;
+  renderCart();
+});
+
+document.getElementById("checkout-btn").addEventListener("click", () => {
+  if (cart.length === 0) {
+    alert("Tu carrito está vacío 😅");
+  } else {
+    alert("Gracias por tu compra 🛍️");
+    cart.length = 0;
+    renderCart();
+  }
+});
+</script>
+
+
 
 
     <!-- Footer Start -->
