Update video button source in index.html
correccion del otro video

--- a/index.html
+++ b/index.html
@@ -196,11 +196,12 @@
                     <p>Ofrecemos una atencion personalizada, exámenes de la vista sin costo y una amplia variedad de armazones y lentes de las mejores marcas.Nuestro compromiso en brindarte la mejor calidad óptica y un servicio confiable y profesional</p>
                     <div class="d-flex align-items-center pt-4">
                         <a href="" class="btn btn-primary mr-5">Conócenos</a>
-                        <button type="button" class="btn-play" data-toggle="modal"
-                            data-src="https://www.youtube.com/embed/DWRcNpR6Kdc" data-target="#videoModal">
-                            <span></span>
-                        </button>
-                        <h5 class="font-weight-normal text-white m-0 ml-4 d-none d-sm-block">Play Video</h5>
+                         <button type="button" class="btn-play" data-toggle="modal"
+        data-src="https://www.youtube.com/embed/BdL5D32Gyc4"
+        data-target="#videoModal">
+    <span></span>
+</button>
+<h5 class="font-weight-normal text-white m-0 ml-4 d-none d-sm-block">Play Video</h5>
                     </div>
                 </div>
             </div>
